// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[v3] <SearchBox /> renders correctly 1`] = `
<WithStyles(WithLabels)
  onChange={[MockFunction]}
/>
`;

exports[`[v3] <SearchBox /> renders disabled correctly 1`] = `
<WithStyles(WithLabels)
  disabled={true}
  onChange={[MockFunction]}
/>
`;
